backend/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vet-clinic
spec:
  hosts:
  - "*"
  gateways:
  - vet-clinic-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: vet-clinic
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vet-clinic-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
